# hh_test

./: CMakeLists.txt  LICENSE  README.md
src/: compute_hh.cu  compute_hh2.cu  compute_hh_wrapper.f90  cuda_c_interface.cu  cuda_f_interface.f90  hh_test.f90  mma_m8n8k4_fp64_sm80.cuh
